--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="carousel-inner h-100">
           <div class="carousel-item">
             <img
-              src="/img-1.jpg"
+              src="img-1.jpg"
               class="d-block w-100 bg-img1"
               alt="First slide"
             />
@@ -140,7 +140,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/img-2.jpg"
+              src="img-2.jpg"
               class="d-block w-100 bg-img2"
               alt="Second slide"
             />
@@ -164,7 +164,7 @@
           </div>
           <div class="carousel-item active">
             <img
-              src="/img-3.jpg"
+              src="img-3.jpg"
               class="d-block w-100 bg-img3"
               alt="thirt slide"
             />
